# ClothingRepairAIS

./: .gitignore  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  main.cpp  resources.qrc  schema.sql
src/managers/: ClientManager.cpp  ClientManager.h  OrderManager.cpp  OrderManager.h  ReportBuilder.cpp  ReportBuilder.h
src/models/: Client.h  Employee.h  Order.h  OrderItem.h  OrderStatus.h  OrderStatusIds.h  Position.h  RepairCategory.h  RepairService.h
src/repositories/: ClientRepository.cpp  ClientRepository.h  EmployeeRepository.cpp  EmployeeRepository.h  OrderItemRepository.cpp  OrderItemRepository.h  OrderRepository.cpp  OrderRepository.h  OrderStatusRepository.cpp  OrderStatusRepository.h  PositionRepository.cpp  PositionRepository.h  RepairCategoryRepository.cpp  RepairCategoryRepository.h  RepairServiceRepository.cpp  RepairServiceRepository.h
src/ui/: CategoriesTab.cpp  CategoriesTab.h  ClientsTab.cpp  ClientsTab.h  EmployeesTab.cpp  EmployeesTab.h  MainWindow.cpp  MainWindow.h  OrderDialog.cpp  OrderDialog.h  OrderItemDialog.cpp  OrderItemDialog.h  OrderStatusDelegate.cpp  OrderStatusDelegate.h  OrdersTab.cpp  OrdersTab.h  PositionsTab.cpp  PositionsTab.h  ReferencesTab.cpp  ReferencesTab.h  ReportsTab.cpp  ReportsTab.h  ServicesTab.cpp  ServicesTab.h  StatusesTab.cpp  StatusesTab.h
